Issue#SB-19085 UI - Desktop App - Radio buttons not aligned to the text in RTL (#120)

--- a/src/client/src/app/modules/offline/components/load-content/load-content.component.scss
+++ b/src/client/src/app/modules/offline/components/load-content/load-content.component.scss
@@ -6,9 +6,7 @@
     color: var(--gray-400);
     opacity: 0.5;
   }
-  .sb-radio-title {
-    padding:0.5rem 0 0 1.5rem;
-  }
+
   .sb-label-table .sb-live-error{
     height: 0.5rem;
     width: 0.5rem;
